04-keycloak-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
